projects/01-goals-app-production/src/manifests/03-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goals-backend-svc
  namespace: goals-production
spec:
  selector:
    app: goals-backend
  ports:
    - name: http
      port: 80
      targetPort: 80
